shared/kubernetes/ingress/mookrob-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mookrob-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/meal
        pathType: Prefix
        backend:
          service:
            name: meal-app
            port:
              number: 8080
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: auth-app
            port:
              number: 8080
      - path: /api/restaurant
        pathType: Prefix
        backend:
          service:
            name: restaurant-app
            port:
              number: 8080
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: user-app
            port:
              number: 8080
